--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="BaeCafe - A Web3 Brand for Digital Artists and Enthusiasts." />
-    <meta property="og:image" content="%PUBLIC_URL%/image/baetoken.png">
+    <meta property="og:image" content="https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/baetoken.png">
     <meta property='og:description'  content="BaeCafe - A Web3 Brand for Digital Artists and Enthusiasts.">
     <meta name='twitter:description' content="BaeCafe - A Web3 Brand for Digital Artists and Enthusiasts.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/image/baetoken.png">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/image/baetoken.png" />
+    <meta property="twitter:image" content="https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/baetoken.png">
+    <link rel="apple-touch-icon" href="https://dx8cklxaufs1v.cloudfront.net/baecafeweb/image/baetoken.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--
